<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/list_item_padding"
    android:gravity="center_vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:orientation="vertical">

        <TextView
            android:id="@+id/repo_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/list_item_content_padding"
            android:text="@string/default_repo_name"
            android:textSize="@dimen/abc_text_size_medium_material"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:ellipsize="end"
            android:singleLine="true"
            android:contentDescription="@string/repo_name_descr"/>

        <TextView
            android:id="@+id/repo_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/list_item_content_padding"
            android:text="@string/default_repo_description"
            android:textSize="@dimen/abc_text_size_small_material"
            android:ellipsize="end"
            android:singleLine="true"
            android:contentDescription="@string/repo_description_descr"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="@dimen/list_item_content_padding">

            <ImageView
                android:id="@+id/ic_star"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_star"
                android:contentDescription="@string/ic_star_descr"/>

            <TextView
                android:id="@+id/stars"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/default_stars_count"
                android:textSize="@dimen/abc_text_size_small_material"
                android:contentDescription="@string/stars_descr"/>

            <ImageView
                android:id="@+id/ic_fork"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_fork"
                android:contentDescription="@string/ic_fork_descr"/>

            <TextView
                android:id="@+id/forks"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/default_forks_count"
                android:textSize="@dimen/abc_text_size_small_material"
                android:contentDescription="@string/forks_descr"/>

            <TextView
                android:id="@+id/language"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/default_language"
                android:textSize="@dimen/abc_text_size_small_material"
                android:contentDescription="@string/language_descr"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>